Error Handling with catchError RxJs Operator

--- a/src/app/course-dialog/course-dialog.component.html
+++ b/src/app/course-dialog/course-dialog.component.html
@@ -3,6 +3,7 @@
 opened by the angular material framework and it exists in a different component tree then our components
 and is unable to use <loading> spinner component, imported globally under app.component.html -->
 <loading></loading>
+<messages></messages>
 
 <mat-dialog-content [formGroup]="form">
 
